Added Spring Cloud Sleuth integration. Fixes #500
Added sleuth with backwards compatibility 15d2719
Moving correlationIds to span nomenclature 9b5b233
WIP on migrating micro-infra-camel to spans 888f775
Made camel tests pass 09e2111
Added sleuth integration 0fccd94
Removed autoconfigurations 886ead6
Added starting and stopping of spans c9881c5
Fixed leaky hystrix commands and runnables 6e3800b
Fixed span name passing 7d53aed
Removed UUIDGenerator 46f07c4
Refactored aspects for webasync and rest operations 9cfee02
Removed bad Javadocs 9c22feb
Integrated more with Sleuth e4840d6
Added backwards compaitiblity for correlationid a262578
Updated lib versions a814b98
Wrapped callables, runnables and tracescope 99299d0
Added tests, comments 983d636
Added tests for scheduled 4df5317
Removed unnecessary files, added tests for tracing props enabler f36b50a
Added possibility to a parallel test build and increased permgen for … … 9cd1f53
Added one more example for tracing prop enabler spec 5b6b7c6
Changed branches due to backwards incompatible changes 41884c5
Repackaged swagger to override the issue with annotation 83bf13f
Added exclude for jacoco ee18ad1